--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "pm2": "^1.1.3"
   }
 }
